------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------

|+

------
v2.0.4
------

[jan] Fix PHP deprecation warnings.


------
v2.0.3
------

[jan] Mark PHP 7 as supported.


------
v2.0.2
------

[jan] Add Composer definition.


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.0.1
------

[mms] Don't do regex matching for data that can never match.


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------------
v1.0.0alpha1
------------

First alpha release for Horde 4.


------
v0.0.2
------

Converted to package.xml 2.0 for pear.horde.org


------
v0.0.1
------

Initial release as a PEAR package